# AI-benchmarks-that-Theo-wants

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/_template/: README.md  benchmark.yaml
benchmarks/_template/cases/: sample-case.yaml
benchmarks/description-label/: README.md  benchmark.yaml
benchmarks/description-label/cases/: skate-50-50-grind.yaml  skate-boardslide.yaml  skate-hardflip.yaml  skate-heelflip.yaml  skate-impossible.yaml  skate-inward-heelflip.yaml  skate-kickflip.yaml  skate-manual.yaml  skate-nollie.yaml  skate-ollie.yaml  skate-pop-shove-it.yaml  skate-tre-flip.yaml  snow-backflip.yaml  snow-butter.yaml  snow-cork.yaml  snow-frontflip.yaml  snow-indy-grab.yaml  snow-nollie.yaml  snow-ollie.yaml  surf-airs.yaml  (+5 more)
benchmarks/git-tooling/: README.md  benchmark.yaml
plan/: design.md  todo.md
planning/: readme-goal-plan.md  readme-goal-tracker.md
schemas/: benchmark.schema.json  case.schema.json  failure-store.schema.json  run-record.schema.json
src/ai_bench/: __init__.py  cli.py  failures.py  loader.py  models.py  registry.py  run_records.py  runner.py  sandbox.py  scoring.py  types.py
tests/: __init__.py  conftest.py  test_agent_adapter.py  test_cli_smoke.py  test_conformance.py  test_description_label_benchmark.py  test_failures.py  test_git_tooling_benchmark.py  test_loader.py  test_registry.py  test_run_records.py  test_runner.py  test_sandbox.py  test_sandbox_hardening.py  test_sandbox_integration.py  test_schema.py  test_scoring.py  test_smoke.py  test_template.py  test_validate_cli.py
(+83 files in other folders)
