[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-bench"
version = "0.1.0"
description = "A small, credible benchmark suite and contribution path for community-created AI benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI-bench contributors" }]
keywords = ["benchmarks", "ai", "evaluation", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Boring, small runtime dependencies aligned with the planned architecture.
# PyYAML for human-editable benchmark definitions (yaml.safe_load only at runtime).
# jsonschema for validating benchmark manifests, cases, run-records, and the failure store.
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Verification/development dependencies.
dev = [
    "pytest>=8.0",
]

[project.scripts]
ai-bench = "ai_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_bench"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
